--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This folder contains 5 subfolders:
 
-Example: The one example for testing algorithm from molecule ADP.
+Example: The one example of testing algorithm for molecule ADP.
 
 AreaAndVolume: one tool of calculating area and volume for OFF file.
 
