--- a/Example/README
+++ b/Example/README
@@ -1,4 +1,6 @@
 Function: Sparse representation of Gaussian Molecular Surface.
 
 Run format
-	run Example with ADP.pqr in the command window of MATLAB.
+	run .p file (Example) with ADP.pqr in the command window of MATLAB.
+For example
+	Example
